# DirectFitGirlDownloader

./: CMakeLists.txt  ConsoleColors.h  CurlHelper.h  LICENSE  LinkGenerator.cpp  LinkGenerator.h  ProgressBar.cpp  ProgressBar.h  README.md  main.cpp
